# -*- mode: Makefile; tab-width: 4; indent-tabs-mode: 1; st-rulers: [70] -*-
# vim: ts=8 sw=8 ft=Makefile noet

bin_PROGRAMS = narcd

narcd_SOURCES =  adlist.c crc16.c endianconv.c narc.h sds.c sha1.h tcp_client.c util.c \
	adlist.h crc64.c endianconv.h narcassert.h sds.h solarisfixes.h tcp_client.h util.h \
	config.c crc64.h fmacros.h setproctitle.c stream.c udp_client.c version.h \
	config.h debug.c narc.c sha1.c stream.h udp_client.h

	